--- a/website.html
+++ b/website.html
@@ -15,7 +15,7 @@
 
     <style type="text/css">
     body{
-        background-image: "img/toronto1.jpg";
+        background-image: url("img/toronto1.jpg");
         }
         </style>
 </head>
