--- a/website.html
+++ b/website.html
@@ -19,10 +19,10 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="Website.html"> Home</a>
+          <a class="nav-link" href="Website.html"> Forecast</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Method.html"> Our Journey </a>
+          <a class="nav-link" href="Method.html"> Method </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="contact.html"> Contact </a>
