--- a/contact.html
+++ b/contact.html
@@ -16,29 +16,21 @@
 <body>
 <!-- Navigation -->
 <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-<div class="container-fluid">
-    <a class="navbar-brand" href="home.html"><img src="images/weatherguys.png" alt="companylogo"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse"
-    data-target="#navbarResponsive">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="home.html"> Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="journey.html"> Our Journey </a>
-        </li>
-	      <li class="nav-item">
-          <a class="nav-link" href="map.htm"> MAP </a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="contact.html"> Contact </a>
-        </li>
-      </ul>
+    <div class="container-fluid">
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="Website.html"> Forecast</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Method.html"> Method </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html"> Contact </a>
+            </li>
+          </ul>
+        </div>
     </div>
-</div>
 </nav>
 
   <div class="container-fluid padding">
@@ -101,7 +93,7 @@
   </div>
   <div class="col-12">
     <hr class="light">
-    <h5>&copy; 2021 GEOM 99 Group 5</h5>
+    <h5>&copy; Fahrenheit 2021</h5>
   </div>
 </div>
 </div>
