--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
               <a class="nav-link" href="Method.html"> Method </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html"> Contact </a>
+              <a class="nav-link" href="Contact.html"> Contact </a>
             </li>
           </ul>
         </div>
@@ -83,14 +83,7 @@
 <footer>
 <div class="container-fluid padding">
 <div class="row text-center">
-  <div class="col-md-6">
-    <img src="images/weatherguys.png" alt="companylogo">
-    <hr class="light"> 
-  </div>
-  <div class="col-md-6">
-    <img src="images/fleminglogo.png" alt="collegelogo">
-    <hr class="light"> 
-  </div>
+  
   <div class="col-12">
     <hr class="light">
     <h5>&copy; Fahrenheit 2021</h5>
