--- a/website.html
+++ b/website.html
@@ -25,7 +25,7 @@
           <a class="nav-link" href="Method.html"> Method </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html"> Contact </a>
+          <a class="nav-link" href="Contact.html"> Contact </a>
         </li>
       </ul>
     </div>
