--- a/website.html
+++ b/website.html
@@ -19,13 +19,13 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="Website.html"> Forecast</a>
+          <a class="nav-link" href="website.html"> Forecast</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Method.html"> Method </a>
+          <a class="nav-link" href="method.html"> Method </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Contact.html"> Contact </a>
+          <a class="nav-link" href="contact.html"> Contact </a>
         </li>
       </ul>
     </div>
