--- a/contact.html
+++ b/contact.html
@@ -19,13 +19,13 @@
     <div class="container-fluid">
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
               <a class="nav-link" href="website.html"> Forecast</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="method.html"> Method </a>
             </li>
             <li class="nav-item">
+            <li class="nav-item active"></li>
               <a class="nav-link" href="contact.html"> Contact </a>
             </li>
           </ul>
