--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
             <li class="nav-item">
               <a class="nav-link" href="method.html"> Method </a>
             </li>
-            <li class="nav-item active"></li>
+            <li class="nav-item active">
               <a class="nav-link" href="contact.html"> Contact </a>
             </li>
           </ul>
