--- a/contact.html
+++ b/contact.html
@@ -13,23 +13,28 @@
 </head>
 
 
-<body>
-<!-- Navigation -->
+<!-- Nav bars -->
 <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-    <div class="container-fluid">
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-              <a class="nav-link" href="website.html"> Forecast</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="method.html"> Method </a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="contact.html"> Contact </a>
-            </li>
-          </ul>
-        </div>
-    </div>
+  <div class="container-fluid">
+      <a class="navbar-brand" href="index.html"><img alt ='logo' src="img/rsz_logo_green.png" width="110" height="50"><strong>Ontario</strong> Weather</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse"
+      data-target="#navbarResponsive">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html"> Forecast</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="method.html"> Method </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html"> Contact </a>
+          </li>
+        </ul>
+      </div>
+  </div>
 </nav>
 
   <div class="container-fluid padding">
