--- a/index.html
+++ b/index.html
@@ -39,25 +39,26 @@
 <!-- Nav bars -->
 <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"><img alt ='logo' src="img/rsz_logo_green.png" width="110" height="50"><strong>Ontario</strong> Weather</a>
+        <a class="navbar-brand" href="index.html"><img alt ='logo' src="img/rsz_logo_green.png" width="110" height="50"><strong>Ontario Weather</strong></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse"
         data-target="#navbarResponsive">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav mr-auto">
+		</div>
+        <div class="navbar-collapse collapse"  id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="index.html"> Forecast</a>
+              <a class="nav-link" href="index.html"><strong> Forecast</strong></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="method.html"> Method </a>
+              <a class="nav-link" href="method.html"><strong> Method </strong></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html"> Contact </a>
+              <a class="nav-link" href="contact.html"><strong> Contact </strong></a>
             </li>
           </ul>
         </div>
-    </div>
+    
 </nav>
     
 <div class="background">
