--- a/contact.html
+++ b/contact.html
@@ -21,20 +21,21 @@
       data-target="#navbarResponsive">
           <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html"> Forecast</a>
+  </div>
+      <div class="navbar-collapse collapse"  id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html"><strong> Forecast</strong></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="method.html"> Method </a>
+            <a class="nav-link" href="method.html"><strong> Method </strong></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html"> Contact </a>
+            <a class="nav-link active" href="contact.html"><strong> Contact </strong></a>
           </li>
         </ul>
       </div>
-  </div>
+  
 </nav>
 
   <div class="container-fluid padding">
