--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="navbar-collapse collapse"  id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="index.html"><strong> Forecast</strong></a>
+              <a class="nav-link" href="map.html"><strong> Map</strong></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="method.html"><strong> Method </strong></a>
