--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
     "Air Temperature" : Temperature,
     "Wind Speed" : wind,
     };
-    L.control.layers( baseMaps, overlays, {collapsed:false}).addTo(map);
+    L.control.layers( baseMaps, overlays, {collapsed:true}).addTo(map);
   
    
    /* 'https://github.com/aaronjutzi/Fahrenheit2101/blob/main/img/logo_blue.png' */
