--- a/index.html
+++ b/index.html
@@ -58,17 +58,16 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
         bottom: 100px;
     
     }*/
-	    #container{
-      position: absolute;
-      top: 100px;
-  right: 40px;
-  width: 1200px;
-  height: 700px;
-  border: 2px solid #73AD21;
-        /*height: 380px;
-        width:1200px;
-        left: 290px;*/
+	#container{
+      display: block;
+      width: 90vw;
+      height: calc(.75 * 90vw);
+      max-width: 1000px;
+      max-height: 600px;
+
+      margin: 1em auto;
     }
+    
     #map {
       position: absolute;
       height: inherit; 
@@ -205,18 +204,7 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
    
    /* 'https://github.com/aaronjutzi/Fahrenheit2101/blob/main/img/logo_blue.png' */
 
-   var logo = L.control({
-    position: 'bottomright',
-        height: '50px',
-        width: '50px',
-        target: '_self'
-    });
-    logo.onAdd = function(map){
-        var div = L.DomUtil.create('div', 'myclass');
-        div.innerHTML= "<img src='https://aaronjutzi.github.io/Fahrenheit2101/img/rsz_logo.png'/>";
-        return div;
-    }
-    logo.addTo(map);
+ 
     </script>
 <!--- Footer -->
 <div class="footer fixed-bottom">
