--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     crossorigin="anonymous">
     <!-- Weather Icons -->
     <link rel="stylesheet" type="text/css" href= "https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.12/css/weather-icons-wind.min.css">
-
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Fonts -->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css">
     <!-- Bootsrap Links -->
@@ -106,7 +106,7 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
         <div class="navbar-collapse collapse"  id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-		    <a class="nav-link" href="index.html"><i class="fa fa-fw fa-home"></i><strong> Home </strong></a>
+		    <a class="nav-link" href="index.html"><strong><i class="fa fa-fw fa-home"></i> Home </strong></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="method.html"><strong> Methodology </strong></a>
@@ -115,7 +115,7 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
               <a class="nav-link" href="map.html"><strong> Product </strong></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html"><i class="fa fa-fw fa-envelope"></i><strong> Contact </strong></a>
+              <a class="nav-link" href="contact.html"></i><strong><i class="fa fa-fw fa-envelope"> Contact </strong></a>
             </li>
           </ul>
         </div>
