--- a/cont.html
+++ b/cont.html
@@ -88,20 +88,14 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
   font-size: 17px;
   padding-right: 150px
 }
-	    #h2 {
+	    h2 {
     font-weight:bold;
     font-family: 'Poppins', sans-serif;
     text-align:center;
 }
 
-#contact-form input{
-    font-size: 17px;
-    width: 100%;
-    padding: 15px;
-    border: 2px solid #9e9e9e;
-    margin: 10px 0px;
-	color:#3b74af;
-#contact-form textarea {
+.contact-form input, 
+.contact-form textarea {
     font-size: 17px;
     width: 100%;
     padding: 15px;
@@ -110,14 +104,7 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
 	color:#3b74af;
 }
 
-#contact-form{
-    background: #3b74af;
-    color: #FFF;
-    cursor: pointer;
-    border:none;
-}
-    
-	    #submit-button {
+.contact-form .submit-button {
     background: #3b74af;
     color: #FFF;
     cursor: pointer;
