--- a/cont.html
+++ b/cont.html
@@ -161,7 +161,8 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
     
 </nav>
 
-
+<div class="container">
+  <div class="contact-us">
 <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-12">
     <h2>Contact Us</h2>
     <div class="contact">
@@ -172,6 +173,8 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
     		<input class="submit-button" type="submit">
     	</form>
     </div>
+</div>
+	    </div>
 </div>
 
   
