--- a/cont.html
+++ b/cont.html
@@ -161,9 +161,9 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
     
 </nav>
 
-<div class="container-fluid padding">
-  <div class="contact-us">
-<div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-12">
+<div class="container">
+ <div class="row justify-content-center">
+  <div class="form-group col-md-4 col-md-offset-5 align-center ">
     <h2>Contact Us</h2>
     <div class="contact">
      	<form class="contact-form" action="" method="post">
