--- a/contact.html
+++ b/contact.html
@@ -32,8 +32,7 @@
     <li class="nav-item">
             <a class="nav-link" href="map.html"><strong> Product </strong></a>
           </li>
-          <li class="nav-item">
-          <li class="nav-item active"></li>
+          <li class="nav-item active">
             <a class="nav-link" href="contact.html"><strong> Contact </strong></a>
           </li>
         </ul>
