--- a/home.html
+++ b/home.html
@@ -90,7 +90,7 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
   <div class="col-12">
     <h1 class="display-4"> Description of Our Project</h1>
   </div>
-  <hr>
+  <hr class="light">
   <div class="col-12">
     <h2 class="lead">Developing a web-based application that delivers an estimation of the true weather in Ontario every 
       hour at the user's exact location (or chosen location) using only open-source technologies and solutions  </h2>
@@ -105,7 +105,7 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
     <h1 class="display-4"> Meet the Team </h1>
   </div>
   <!--Horizontal rule-->
-  <hr> 
+  <hr class="light"> 
 </div>
 </div>
 
@@ -158,7 +158,7 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
       <h1 class="display-4"> Software Used </h1>
     </div>
     <!--Horizontal rule-->
-    <hr> 
+    <hr class="light">
   </div>
   </div>
 
