--- a/method.html
+++ b/method.html
@@ -167,16 +167,17 @@
 
   </script>
 <!--- Footer -->
-<div class="footer fixed-bottom">
-    <div class="container-fluid padding">
-    <div class="row text-center">
-      <div class="col-">
-        <hr class="light">
-        <h5>&copy; Fahrenheit 2021</h5>
-      </div>
+<footer>
+  <div class="container-fluid padding">
+  <div class="row text-center">
+    
+    <div class="col-12">
+      <hr class="light">
+      <h5>&copy; Fahrenheit 2021</h5>
     </div>
-    </div>
+  </div>
+  </div>
   </footer>
-</div>
+
 </body>
 </html>
