--- a/contact.html
+++ b/contact.html
@@ -94,6 +94,15 @@
   <div class="footer fixed-bottom"></div>
   <div class="container-fluid padding">
   <div class="row text-center">
+    <div class="col-md-4">
+      <img alt ='logo' src="img/rsz_logo_green.png" width="110" height="50">
+    </div>
+    <div class="col-md-4">
+      <img alt ='logo' src="img/arubrum.png" width="110" height="50">
+    </div>
+    <div class="col-md-4">
+      <img src="img/fleminglogo.png" alt= "fleming">
+    </div>
     <div class="col-12">
       <hr class="light">
       <h5>&copy; Fahrenheit 2021</h5>
