--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
             <a class="nav-link" href="method.html"><strong> Methodology </strong></a>
           </li>
     <li class="nav-item">
-            <a class="nav-link" href="map.html"><strong> Product </strong></a>
+            <a class="nav-link" href="product.html"><strong> Product </strong></a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="contact.html"><strong> Contact </strong></a>
