--- a/product.html
+++ b/product.html
@@ -127,7 +127,7 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
   </div>
       <div class="navbar-collapse collapse"  id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
-      <a class="nav-link" href="home.html"><strong> Home </strong></a>
+      <a class="nav-link" href="index.html"><strong> Home </strong></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="method.html"><strong> Methodology </strong></a>
