--- a/method.html
+++ b/method.html
@@ -98,7 +98,7 @@
   </div>
       <div class="navbar-collapse collapse"  id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
-      <a class="nav-link" href="home.html"><strong> Home </strong></a>
+     <a class="nav-link" href="index.html"><strong> Home </strong></a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="method.html"><strong> Methodology </strong></a>
