--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 <!-- Nav bars -->
 <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
   <div class="container-fluid">
-      <a class="navbar-brand" href="home.html"><img alt ='logo' src="img/rsz_logo_green.png" width="110" height="50"><strong>Ontario</strong> Weather</a>
+      <a class="navbar-brand" href="index.html"><img alt ='logo' src="img/rsz_logo_green.png" width="110" height="50"><strong>Ontario</strong> Weather</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse"
       data-target="#navbarResponsive">
           <span class="navbar-toggler-icon"></span>
@@ -26,7 +26,7 @@
   </div>
       <div class="navbar-collapse collapse"  id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
-      <a class="nav-link" href="home.html"><strong> Home </strong></a>
+     <a class="nav-link" href="index.html"><strong> Home </strong></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="method.html"><strong> Methodology </strong></a>
