--- a/product.html
+++ b/product.html
@@ -32,7 +32,7 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
  
     <style type="text/css">
     body{
-        /*background-image: url("img/toronto1.jpg");*/
+        background-image: url("img/toronto1.jpg");
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
