--- a/index.html
+++ b/index.html
@@ -50,21 +50,21 @@
 </ul> 
 <div class="carousel-inner">
   <div class="carousel-item active">
-    <img alt= "weatherBackground" src="img/pic2.jpg">
+    <img alt= "weatherBackground" src="img/toronto1.jpg">
     <div class="carousel-caption">
       <h1 class="display-2"> Using Open Source Technologies to Interpolate Weather Across Ontario</h1>
       <h3>Arubrum Innovations</h3>
     </div>
   </div>
   <div class="carousel-item">
-    <img alt= "pressureBackground" src="img/pic2.jpg">
+    <img alt= "pressureBackground" src="img/toronto1.jpg">
     <div class="carousel-caption">
       <h1 class="display-2"> Using Open Source Technologies to Interpolate Weather Across Ontario</h1>
       <h3>Arubrum Innovations</h3>
     </div>
   </div>
   <div class="carousel-item">
-    <img alt= "cloudBackground" src="img/pic2.jpg">
+    <img alt= "cloudBackground" src="img/toronto1.jpg">
     <div class="carousel-caption">
       <h1 class="display-2"> Using Open Source Technologies to Interpolate Weather Across Ontario</h1>
       <h3>Arubrum Innovations</h3>
