--- a/product.html
+++ b/product.html
@@ -115,7 +115,15 @@ div.info {
   font-size: 17px;
   padding-right: 150px
 }
-    
+.ui-control {
+  background:#fff;
+  position:absolute;
+  top:10px;
+  right:10px;
+  padding:10px;
+  z-index:100;
+  border-radius:3px;
+  }
     /*{
       position: absolute;
       top: 100px;
@@ -224,7 +232,9 @@ div.info {
    
       
 
-  
+  map.on('mousemove click', function(e) {
+    window[e.type].innerHTML = e.containerPoint.toString() + ', ' + e.latlng.toString();
+});
   
  
 
@@ -237,7 +247,12 @@ div.info {
   <div class="transbox">
     <div class='info'>
     <p><h2>Weather Information</h2></p>
-  </div></div>
+  </div>
+  <div id='output' class='ui-control'>
+    Click: <code id='click'></code><br/>
+    Mousemove: <code id='mousemove'></code><br/>
+  </div>
+</div>
 <!--- Footer -->
 <div class="footer fixed-bottom">
     <div class="container-fluid padding">
