--- a/product.html
+++ b/product.html
@@ -46,13 +46,15 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
       top:105px; 
       left: 22px;
       bottom:0; 
-      width:90%;
-      width: 90vw;
-      height: calc(.75 * 90vw);
-      max-width: 1000px;
+      height: 100%;
+                width: 75%;
+
+      
+      /*height: calc(.75 * 90vw);
+      /*max-width: 1000px;
       max-height: 600px;
       padding-left: 20px;
-      padding-right: 20px;
+      padding-right: 20px;*/
       
      }
      div.transbox {
@@ -157,10 +159,10 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
         <ul class="navbar-nav ml-auto">
      <a class="nav-link" href="index.html"><strong> Home </strong></a>
           </li>
-          <li class="nav-item ">
+          <li class="nav-item active">
             <a class="nav-link" href="method.html"><strong> Methodology </strong></a>
           </li>
-    <li class="nav-item active">
+    <li class="nav-item">
             <a class="nav-link" href="product.html"><strong> Product </strong></a>
           </li>
           <li class="nav-item">
@@ -259,17 +261,7 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
   </div>
 </div>
 <!--- Footer -->
-<div class="footer fixed-bottom">
-    <div class="container-fluid padding">
-    <div class="row text-center">
-      <div class="col-">
-        <hr class="light">
-        <h5>&copy; Fahrenheit 2021</h5>
-      </div>
-    </div>
-    </div>
-  </footer>
-</div>
+
 </body>
 </html>
 
