--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,77 @@
   <link href="style.css" rel="stylesheet">
 
 </head>
+<style>
+  body{
+    background-image: url("img/toronto1.jpg");
+        background-size: cover;
+        background-repeat: no-repeat;
+        
+  }
+  * {
+    box-sizing: border-box;
+  }
+  
+  input[type=text], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
+  }
+  
+  label {
+    padding: 12px 12px 12px 0;
+    display: inline-block;
+  }
+  
+  input[type=submit] {
+    background-color: #04AA6D;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    float: right;
+  }
+  
+  input[type=submit]:hover {
+    background-color: #45a049;
+  }
+  
+  .container {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+  }
+  
+  .col-25 {
+    float: left;
+    width: 25%;
+    margin-top: 6px;
+  }
+  
+  .col-75 {
+    float: left;
+    width: 75%;
+    margin-top: 6px;
+  }
+  
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+  @media screen and (max-width: 600px) {
+    .col-25, .col-75, input[type=submit] {
+      width: 100%;
+      margin-top: 0;
+    }
+  }
+  </style>
 <body>
 
 
@@ -42,52 +113,65 @@
 </nav>
 
 
-  <div class="container-fluid padding">
-    <div class="row welcome text-center">
-      <div class="col-12">
-        <h3 class="display-4"> Contact Form</h3>
+
+  
+  <div style='color:rgb(0, 255, 64);'>
+  <h2 style='text-align: center;'>Contact Form</h2>
+  <p style='text-align: center;'>If you have any questions on our project, please send us a message by filling in the below form.</br> 
+    We will try our best to answer all your inquries!</p>
+  </div>
+  <div class="container">
+    <form action="validate.php" method="POST" id="my-form">
+      <div class="row">
+        <div class="col-25">
+          <label for="fname">First Name</label>
+        </div>
+        <div class="col-75">
+          <input type="text" id="fname" name="firstName" placeholder="Your name..">
+        </div>
       </div>
-      <div class="col-12">
-        <h2 class="lead">If you have any questions on our project, please send us a message by filling in the below form. <br> We will try our best to answer all your inquries!</h2>
+      <div class="row">
+        <div class="col-25">
+          <label for="lname">Last Name</label>
+        </div>
+        <div class="col-75">
+          <input type="text" id="lname" name="lastName" placeholder="Your last name..">
+        </div>
       </div>
-    </div>
-  </div>  
-  <section>
-    <div class="container">
-      <!-- Submit to formspree API-->
-      <form action="https://formspree.io/f/moqyqgqd" method="POST" id="my-form">
-
-        <div class="form-group">
-          <label for="firstName"> First Name </label>
-          <input type="text" id="firstName" name="firstName">
+      <div class="row">
+        <div class="col-25">
+          <label for="lname">Email</label>
         </div>
-        <div class="form-group">
-          <label for="lastName"> Last Name </label>
-          <input type="text" id="lastName" name="lastName">
+        <div class="col-75">
+          <input type="text" id="fname" name="firstName" placeholder="Your Email..">
         </div>
-        <div class="form-group">
-          <label for="email"> Email </label>
-          <input type="email" id="email" name="email">
+      </div>
+      <div class="row">
+        <div class="col-25">
+          <label for="lname">Phone Number</label>
         </div>
-        <div class="form-group">
-          <label for="phoneNumber"> Phone Number</label>
-          <input type="tel" id="phoneNumber" name="phoneNumber">
+        <div class="col-75">
+          <input type="text" id="lname" name="phoneNumber" placeholder="Your Phone Number..">
         </div>
-
-        <div class="form-group">
-          <label for="message"> Message </label>
-          <textarea name="message" id="message" cols="30" rows="10"></textarea>
+      </div>
+     
+      <div class="row">
+        <div class="col-25">
+          <label for="subject">Message</label>
         </div>
-
-        <button type="submit"> Submit </button> 
-
-      </form>
-    </div>
-
-    <div id="status">  </div>
-
-  </section>
-  <script src="./main.js"></script>
+        <div class="col-75">
+          <textarea id="subject" name="message" placeholder="Write something.." style="height:200px"></textarea>
+        </div>
+      </div>
+      <div class="row">
+        <input type="submit" value="Submit">
+      </div>
+    </form>
+  </div>
+  
+  </body>
+  </html>
+  
 
 <!--- Footer -->
 <footer>
