--- a/method.html
+++ b/method.html
@@ -45,7 +45,7 @@
     <div class="row welcome text-center">
       <div class="col-12">
     <h2 class="text-center" style="color: brown;">Methodology: How we did it</h2></div>
-    <div class="col-12"> <h4 class="text-justify">PREPARING THE STUDY AREA </h4></div>
+    <div class="col-12"> <h4 class="text-justify" style="color: rgb(42, 165, 69);">PREPARING THE STUDY AREA </h4></div>
     <h5 style="color: rgb(165, 46, 42);" >Weather Stations:</h5>
     <p class="text-justify">Weather stations within Ontario and within a 50km 
         distance from the borders of Ontario were clipped for inclusion in the study area. 
@@ -57,10 +57,19 @@
          <p class="text-justify"> We created raster files automatically, using python scripts. 
            After discovering that we could not query raster in Leaflet to fulfill our project purpose, 
            we resolved to coverting the raster to GeoJSON files which would then be used to query for temperature and 
-           wind speed information in the mapping application.
+           wind speed information in the mapping application.</br>
+           Rectangle tiles were created in QGIS using the create grid tool. Setting horizontal and vertical spacing to 0.4 degrees
+           ,and the extent was set to –100,0,0,60 (left, right, bottom, top). 
+           Point grid tiles were also created, with horizontal and vertical spacing set to 
+           0.04 degrees and the extent set to –100.02, 0.02, 0.02, 60.02. 
+           The 0.02 was added to the point extents to offset their locations not to overlap the rectangle grids. </br>
+           The goal here was to have GeoJSON files for each respective tile, and each of those files would hold the 
+           points that fall within the extents of that tile. Each GeoJSON files' name was the extent of the corresponding rectangle tile
+           concatenated with a "G" in front. This rectangle points and grids were then spatially joined to have the grid tile name added to 
+           the point grid layer, splitting the vector layers in separate GeoJSON files according to grid tile name every hour.
            </p>
     
-    <div class="col-12"><h4 class="text-justify" > Retrieving the raw weather data: </h4></div>
+    <div class="col-12"><h4 class="text-justify" style="color: rgb(42, 165, 69);" > Retrieving the raw weather data: </h4></div>
     <p class="text-justify">
 
     </p>  
