--- a/method.html
+++ b/method.html
@@ -98,7 +98,7 @@
     
     <div class="col-12">
       <p><h6 style="color: rgb(238, 10, 10);">Image showing Ontario divided into nine different regions</h6></p>
-        <h4 class="text-justify"> WEB DEVELOPMENT  </h4></div>
+        <h4 class="text-justify" style="color: rgb(42, 165, 69);"> WEB DEVELOPMENT  </h4></div>
         <p class="text-justify">
           The Ontario weather web application displays weather information for all of Ontario. 
           It has been designed to retrieve weather information stored on the server and report 
